# zein-game-dev

./: .gitignore  GAME_PROJECT.md  IDENTITY.md  README.md  USER.md  errors.txt  log.txt  traceback.txt
.openclaw/: workspace-state.json
AutoCreatGame/: .gitignore  IDEA-galgame 游戏生成.md  PLAN.md  README.md  pyproject.toml
AutoCreatGame/examples/: luoshengmen.txt  rain_cafe.txt  sample_novel.txt
AutoCreatGame/storyforge/: __init__.py  cli.py  config.py
AutoCreatGame/storyforge/ast/: nodes.py
AutoCreatGame/storyforge/generator/: renpy_generator.py
AutoCreatGame/storyforge/parser/: llm_client.py  models.py  prompts.py  story_parser.py
AutoCreatGame/storyforge/project/: builder.py
AutoCreatGame/tests/: test_ast.py  test_generator.py  test_parser.py
AutoCreatGame/tests/fixtures/: sample_story.txt
game/: gui.rpy  gui.rpyc  guitar_screen.rpy  options.rpy  options.rpyc  screens.rpy  screens.rpyc  script.rpy  script.rpyc  world_fanghongjian.rpy  world_guitar.rpy
game/cache/: bytecode-39.rpyb  py3analysis.rpyb  screens.rpyb
game/saves/: persistent
memory/: 2026-03-02.md  2026-03-03.md
renpy/ZeinGame/: .gitignore
renpy/game/: options.rpy  screens.rpy  script.rpy
